@@ -1,4 +1,5 @@
 HEAD
+	+ Stop cloud-prof service when downgrading subscription packages
 	+ When unsubscribing remove extra packages before saving changes
 	+ Better check of versions numbers in backup restore
 	+ Make EBox::MyDBEngine more reusable
